# voice-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
infra/: main.tf  providers.tf  variables.tf
scripts/: test_setup.py
server/: config.py  main.py  session_state.py
server/agents/: __init__.py  assessment.py  document.py  remediation.py  router.py
server/api/: __init__.py  rest.py  ws.py
server/tools/: __init__.py  assessment_tools.py  cc_client.py  document_tools.py  navigation_tools.py  onboarding_tools.py  remediation_tools.py  suggestion_tools.py
tests/: test_session_state.py  test_ws_auth.py
